tests/neg/parser-stability-6.scala
class x0 {
1 + x1 * / |= 2  // error // error
